force-app/main/default/objects/Customer__c/fields/OTP_Status__c.field-meta.xml
<CustomField>
    <fullName>OTP_Status__c</fullName>
    <label>OTP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>