force-app/main/default/objects/Customer__c/fields/Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_ID__c</fullName>
    <label>Slack Channel ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>