force-app/main/default/objects/Customer__c/fields/Slack_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Name__c</fullName>
    <label>Slack Channel Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>