force-app/main/default/objects/Customer__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <displayFormat>CU-{0000}</displayFormat>
    <label>Unique Id</label>
    <type>AutoNumber</type>
</CustomField>